--- a/src/client/Desktop/Desktop.csproj
+++ b/src/client/Desktop/Desktop.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\TextureGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Autofac, Version=5.1.3.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
@@ -52,6 +53,12 @@
     </Reference>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.1.1.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
+    </Reference>
+    <Reference Include="Mir.Ethernity.ImageLibrary, Version=1.3.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\mir.ethernity.imagelibrary.1.3.1\lib\netstandard2.0\Mir.Ethernity.ImageLibrary.dll</HintPath>
+    </Reference>
+    <Reference Include="Mir.Ethernity.ImageLibrary.Zircon, Version=1.3.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Mir.Ethernity.ImageLibrary.Zircon.1.3.1\lib\netstandard2.0\Mir.Ethernity.ImageLibrary.Zircon.dll</HintPath>
     </Reference>
     <Reference Include="MonoGame.Framework">
       <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\MonoGame.Framework.dll</HintPath>
