--- a/src/client/Windows/packages.config
+++ b/src/client/Windows/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Autofac" version="5.1.3" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
+  <package id="mir.ethernity.imagelibrary" version="1.3.1" targetFramework="net461" />
+  <package id="Mir.Ethernity.ImageLibrary.Zircon" version="1.3.1" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
 </packages>
