add map reader package & set wemade default map reader

--- a/src/client/Desktop/Desktop.csproj
+++ b/src/client/Desktop/Desktop.csproj
@@ -60,6 +60,12 @@
     <Reference Include="Mir.Ethernity.ImageLibrary.Zircon, Version=1.3.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Mir.Ethernity.ImageLibrary.Zircon.1.3.1\lib\netstandard2.0\Mir.Ethernity.ImageLibrary.Zircon.dll</HintPath>
     </Reference>
+    <Reference Include="Mir.Ethernity.MapLibrary, Version=1.0.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Mir.Ethernity.MapLibrary.1.0.5\lib\netstandard2.0\Mir.Ethernity.MapLibrary.dll</HintPath>
+    </Reference>
+    <Reference Include="Mir.Ethernity.MapLibrary.Wemade, Version=1.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Mir.Ethernity.MapLibrary.Wemade.1.0.3\lib\netstandard2.0\Mir.Ethernity.MapLibrary.Wemade.dll</HintPath>
+    </Reference>
     <Reference Include="MonoGame.Framework">
       <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\MonoGame.Framework.dll</HintPath>
     </Reference>
