--- a/src/client/Desktop/packages.config
+++ b/src/client/Desktop/packages.config
@@ -4,6 +4,8 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
   <package id="mir.ethernity.imagelibrary" version="1.3.1" targetFramework="net461" />
   <package id="Mir.Ethernity.ImageLibrary.Zircon" version="1.3.1" targetFramework="net461" />
+  <package id="Mir.Ethernity.MapLibrary" version="1.0.5" targetFramework="net461" />
+  <package id="Mir.Ethernity.MapLibrary.Wemade" version="1.0.3" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
 </packages>
