--- a/src/client/Desktop/packages.config
+++ b/src/client/Desktop/packages.config
@@ -2,10 +2,26 @@
 <packages>
   <package id="Autofac" version="5.1.3" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration" version="3.1.3" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.3" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="3.1.3" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="3.1.3" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="3.1.3" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="3.1.3" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="3.1.3" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="3.1.3" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="3.1.3" targetFramework="net461" />
   <package id="mir.ethernity.imagelibrary" version="1.3.1" targetFramework="net461" />
   <package id="Mir.Ethernity.ImageLibrary.Zircon" version="1.3.1" targetFramework="net461" />
   <package id="Mir.Ethernity.MapLibrary" version="1.0.5" targetFramework="net461" />
   <package id="Mir.Ethernity.MapLibrary.Wemade" version="1.0.3" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="4.7.0" targetFramework="net461" />
+  <package id="System.Text.Json" version="4.7.1" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
