--- a/src/client/Desktop/Desktop.csproj
+++ b/src/client/Desktop/Desktop.csproj
@@ -172,8 +172,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Models\Models.csproj">
-      <Project>{e86d5155-9734-4b09-b2cb-03c04569b4b6}</Project>
+    <ProjectReference Include="..\..\common\models\Models.csproj">
+      <Project>{918103d3-a72c-40fd-a907-03e259021e3d}</Project>
       <Name>Models</Name>
     </ProjectReference>
   </ItemGroup>
