Implements Ping/Pong packets in gate server

--- a/src/server/gate/GateServer.csproj
+++ b/src/server/gate/GateServer.csproj
@@ -16,6 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\common\packets\Packets.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update=".env">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
