--- a/src/client/Windows/packages.config
+++ b/src/client/Windows/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="5.1.3" targetFramework="net461" />
+  <package id="info.lundin.math.dll" version="1.2.6" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="3.1.3" targetFramework="net461" />
   <package id="Microsoft.Extensions.FileProviders.Physical" version="3.1.3" targetFramework="net461" />
@@ -10,6 +11,7 @@
   <package id="Mir.Ethernity.ImageLibrary.Zircon" version="1.3.1" targetFramework="net461" />
   <package id="Mir.Ethernity.MapLibrary" version="1.0.5" targetFramework="net461" />
   <package id="Mir.Ethernity.MapLibrary.Wemade" version="1.0.3" targetFramework="net461" />
+  <package id="Myra" version="0.9.9.202" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.3" targetFramework="net461" />
@@ -19,4 +21,5 @@
   <package id="System.Text.Json" version="4.7.1" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="XNAssets" version="0.5.0.6" targetFramework="net461" />
 </packages>
