--- a/src/client/Android/Android.csproj
+++ b/src/client/Android/Android.csproj
@@ -62,9 +62,6 @@
     </Reference>
     <Reference Include="Mono.Android" />
     <Reference Include="mscorlib" />
-    <Reference Include="Myra, Version=0.9.9.202, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Myra.0.9.9.202\lib\netstandard2.0\Myra.dll</HintPath>
-    </Reference>
     <Reference Include="OpenTK-1.0" />
     <Reference Include="protobuf-net, Version=2.4.0.0, Culture=neutral, PublicKeyToken=257b51d87d2e4d67, processorArchitecture=MSIL">
       <HintPath>..\..\packages\protobuf-net.2.4.6\lib\netstandard2.0\protobuf-net.dll</HintPath>
@@ -112,6 +109,10 @@
     <None Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\GITPersonal\Myra\src\Myra\Myra.MonoGame.csproj">
+      <Project>{a3e6f8b3-d7a4-40cf-a6f7-92363029edad}</Project>
+      <Name>Myra.MonoGame</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\common\models\Models.csproj">
       <Project>{918103d3-a72c-40fd-a907-03e259021e3d}</Project>
       <Name>Models</Name>
