--- a/src/client/Desktop/packages.config
+++ b/src/client/Desktop/packages.config
@@ -6,6 +6,7 @@
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="3.1.3" targetFramework="net461" />
   <package id="Microsoft.Extensions.FileProviders.Physical" version="3.1.3" targetFramework="net461" />
   <package id="Microsoft.Extensions.FileSystemGlobbing" version="3.1.3" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.3" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.3" targetFramework="net461" />
   <package id="mir.ethernity.imagelibrary" version="1.3.1" targetFramework="net461" />
   <package id="Mir.Ethernity.ImageLibrary.Zircon" version="1.3.1" targetFramework="net461" />
@@ -13,6 +14,7 @@
   <package id="Mir.Ethernity.MapLibrary.Wemade" version="1.0.3" targetFramework="net461" />
   <package id="Myra" version="0.9.9.202" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
+  <package id="protobuf-net" version="2.4.6" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.3" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
