--- a/src/server/gameserver/GameServer.csproj
+++ b/src/server/gameserver/GameServer.csproj
@@ -8,14 +8,17 @@
   
   <ItemGroup>
     <PackageReference Include="autofac" Version="5.1.4" />
+    <PackageReference Include="dapper" Version="2.0.35" />
     <PackageReference Include="DotNetEnv" Version="1.4.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.3" />
+    <PackageReference Include="Npgsql" Version="4.1.3.1" />
   </ItemGroup>
   
   <ItemGroup>
     <ProjectReference Include="..\..\common\NetworkServer\Network.csproj" />
+    <ProjectReference Include="..\..\Repository\Repository.csproj" />
   </ItemGroup>
   
   <ItemGroup>
