update migrations & create migration for add admin user

--- a/src/server/gameserver/GameServer.csproj
+++ b/src/server/gameserver/GameServer.csproj
@@ -8,6 +8,7 @@
   
   <ItemGroup>
     <PackageReference Include="autofac" Version="5.1.4" />
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.0" />
     <PackageReference Include="dapper" Version="2.0.35" />
     <PackageReference Include="DotNetEnv" Version="1.4.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.3" />
