--- a/src/Repository/Repository.csproj
+++ b/src/Repository/Repository.csproj
@@ -9,6 +9,8 @@
     <PackageReference Include="FluentMigrator" Version="3.2.6" />
     <PackageReference Include="FluentMigrator.Runner" Version="3.2.6" />
     <PackageReference Include="Npgsql" Version="4.1.3.1" />
+    <PackageReference Include="SqlKata" Version="1.1.7" />
+    <PackageReference Include="SqlKata.Execution" Version="1.1.7" />
   </ItemGroup>
 
 </Project>
