multiples db providers

--- a/src/server/gameserver/.env
+++ b/src/server/gameserver/.env
@@ -1,8 +1,9 @@
 ﻿GS_IP=0.0.0.0
 GS_PORT=5000
 
-PG_HOST=127.0.0.1
-PG_PORT=5432
-PG_USER=game
-PG_PASS=pass@word1
-PG_DB=game
+DB_PROVIDER=PostgreSQL
+DB_HOST=127.0.0.1
+DB_PORT=5432
+DB_USER=game
+DB_PASS=pass@word1
+DB_DATABASE=game
