--- a/src/server/gameserver/GameServer.csproj
+++ b/src/server/gameserver/GameServer.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.3" />
+    <PackageReference Include="MySql.Data" Version="8.0.20" />
     <PackageReference Include="Npgsql" Version="4.1.3.1" />
   </ItemGroup>
   
