Fix migrations multi provider

--- a/src/common/models/Models.csproj
+++ b/src/common/models/Models.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>Mir.Models</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="protobuf-net" Version="2.4.6" />
+  </ItemGroup>
+
 </Project>
