--- a/src/Repository/Repository.csproj
+++ b/src/Repository/Repository.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="SqlKata.Execution" Version="1.1.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\common\models\Models.csproj" />
+  </ItemGroup>
+
 </Project>
