--- a/src/common/packets/Packets.csproj
+++ b/src/common/packets/Packets.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="protobuf-net" Version="2.4.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\models\Models.csproj" />
+  </ItemGroup>
+
 </Project>
